--- a/index.html
+++ b/index.html
@@ -5,8 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Tealuxe</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Cormorant:ital,wght@0,300..700;1,300..700&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/reset.css" />
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="scss/style.css" />
   </head>
   <body>
     <header class="header">
@@ -45,7 +48,7 @@
                 <img src="images/user.svg" alt="user" />
               </a>
             </li>
-            <li class="user-actions__item">
+            <li class="user-actions__item user-actions__item-search">
               <a class="user-actions__link" href="#">
                 <img src="images/search.svg" alt="search" />
               </a>
@@ -60,6 +63,23 @@
         </div>
       </div>
     </header>
+
+    <main class="main">
+      
+      <section class="top">
+        <div class="container">
+          <div class="top__inner">
+            <h1 class="top__title">A cup of tea is a moment of calm in the chaos of life</h1>
+            <p class="top__text">Wide selection of high-quality teas from all over the world, carefully curated by tea experts.</p>
+          </div>
+        </div>
+      </section>
+
+      <blockquote class="blockquote">
+        <p class="blockquote__text">"Tea is not just a drink, it's a way of life and a way to connect with our loved ones."</p>
+      </blockquote>
+
+    </main>
 
     <script src="js/main.js"></script>
   </body>
