--- a/index.html
+++ b/index.html
@@ -19,6 +19,12 @@
             <img src="images/logo.svg" alt="logo Tealuxe" />
           </a>
           <nav class="menu">
+            <button class="menu__btn">
+              <span></span>
+              <span></span>
+              <span></span>
+              <span></span>
+            </button>
             <ul class="menu__list">
               <li class="menu__item">
                 <a class="menu__link" href="#">Black</a>
